test/spec_vectors/simd_i16x8_arith/fail/module_5.wat
(module (func $i16x8.neg-arg-empty (result v128) (i16x8.neg)))